[workspace]
resolver = "2"

members = [
    "packages/core/nros",
    "packages/core/nros-core",
    "packages/core/nros-serdes",
    "packages/core/nros-macros",
    "packages/core/nros-params",
    "packages/core/nros-rmw",
    "packages/core/nros-node",
    "packages/core/nros-log",
    "packages/core/nros-orchestration",
    # Shared per-tier orchestration schema + resolver (RFC-0015). Leaf crate
    # consumed by BOTH the nros CLI codegen and the nros::main! proc-macro so
    # the tier resolution never drifts between build-time and codegen paths.
    "packages/core/nros-orchestration-ir",
    # Build-script helper: extracts Rust type sizes from a compiled rlib so
    # nros-c/nros-cpp can size their opaque storage from Rust's size_of.
    "packages/core/nros-sizes-build",
    # Phase 208.B Track A — build-script helper that resolves nano-ros
    # repo-relative paths without `just`/`.envrc`. Lets bare `cargo
    # build` succeed in a fresh shell (the audit blocker P1).
    "packages/core/nros-build-paths",
    # Phase 221.A.2 — shared build-script helpers for nros-c/nros-cpp.
    "packages/core/nros-build-helpers",
    # Phase 149.5 — shared build-script helpers (manifest parser +
    # link-feature policy) consumed by zpico-sys + the per-kernel
    # generic board crates as `[build-dependencies]`.
    "packages/boards/nros-board-common",
    # Phase 173.4 — canonical board-entry C ABI (`<nros/board.h>` mirror
    # + `nros_board_export!` macro). Sibling to `nros-platform-cffi`.
    "packages/boards/nros-board-cffi",
    # Zenoh-pico FFI bindings
    "packages/zpico/zpico-sys",
    # Phase 221.A — pure build-script helper logic for zpico-sys.
    "packages/zpico/nros-zpico-build",
    # Free-list allocator for z_malloc/z_free on bare-metal
    "packages/zpico/zpico-alloc",
    # XRCE-DDS FFI bindings
    "packages/xrce/xrce-sys",
    # Zenoh RMW backend (shim + zpico wrapper)
    "packages/zpico/nros-rmw-zenoh",
    # Phase 123.A.1.x.4.a — standalone staticlib wrapper. Emits
    # `libnros_rmw_zenoh_staticlib.a` separately from `libnros_c.a`
    # so the SDK matrix can ship them decoupled.
    "packages/zpico/nros-rmw-zenoh-staticlib",
    # Phase 169.5 — Rust shim exposing the Cyclone DDS C++ backend's
    # C-linkage register entry (`nros_rmw_cyclonedds_register`).
    # The underlying library is built by the standalone
    # `packages/dds/nros-rmw-cyclonedds/` CMake project or by the
    # Zephyr module's `CONFIG_NROS_RMW_CYCLONEDDS` branch.
    "packages/dds/nros-rmw-cyclonedds-sys",
    # Phase 212.K.7 — Rust shim co-located with the Cyclone DDS C++
    # backend. `no_std`, alloc-free; provides the runtime descriptor
    # builder + bounded type registry that supersedes the per-msg-pkg
    # `cyclonedds` Cargo feature pattern. The C++ backend is still
    # built by the sibling CMake project.
    "packages/dds/nros-rmw-cyclonedds",
    # Phase 212.K.1 — build-only sys crate that vendors Cyclone DDS via
    # the `cmake` build-script crate. Provides libddsc + idlc to
    # downstream crates via the `DEP_DDSC_*` metadata exports.
    "packages/dds/cyclonedds-sys",
    # Phase 212.K.3 — pure-Rust port of
    # `scripts/cyclonedds/msg_to_cyclone_idl.py`. Lands ahead of the
    # Cyclone wrapper sys crate (212.K.2) so that path stays
    # pure-cargo (no python build-dep).
    "packages/codegen/nros-msg-to-idl",
    # Phase 169.4 — retired Rust DDS crates deleted.
    # Integration tests
    "packages/testing/nros-tests",
    # C API for embedded systems
    "packages/core/nros-c",
    # C++ API (header-only C++14 library + Rust FFI staticlib)
    "packages/core/nros-cpp",
    # LAN9118 Ethernet driver for smoltcp
    "packages/drivers/lan9118-smoltcp",
    # NVIDIA Tegra IVC driver (Orin SPE — Phase 100). Default build is
    # an empty stub; `unix-mock` for host CI, `fsp` to link against
    # NVIDIA's `tegra_aon_fsp.a` (requires `NV_SPE_FSP_DIR`).
    "packages/drivers/nvidia-ivc",
    # Generated ROS 2 interface types (rcl_interfaces, builtin_interfaces).
    # Required by nros-node's param-services feature. Checked into git because
    # cargo requires workspace member paths to exist on disk.
    "packages/interfaces/rcl-interfaces/generated/humble/nros-builtin-interfaces",
    "packages/interfaces/rcl-interfaces/generated/humble/nros-rcl-interfaces",
    "packages/interfaces/lifecycle-msgs/generated/humble/nros-lifecycle-msgs",
    # C function table adapter for third-party RMW backends
    "packages/core/nros-rmw-cffi",
    # Phase 115.L.2 — zenoh-pico via C vtable
    # Ghost model types for verification (shared between production tests and Verus proofs)
    "packages/verification/nros-ghost-types",
    # Unified platform abstraction
    "packages/core/nros-platform",
    "packages/core/nros-platform-api",
    "packages/core/nros-platform-cffi",
    "packages/core/nros-platform-critical-section",
    # Phase 121.3.deprecate-rust-remove + 123.A.1.x.2 — the Rust kernel
    # platform crates (nros-platform-{freertos,nuttx,threadx,zephyr,
    # posix}) were deleted. The directories
    # `packages/core/nros-platform-{freertos,nuttx,threadx,zephyr,
    # posix}/` now hold the C ports only (renamed from `*-c`). The
    # canonical `nros_platform_*` symbols come from the C port compiled
    # by the board crate's build.rs (FreeRTOS / ThreadX) or by the
    # parent build system (NuttX `make`, Zephyr `west`, POSIX via the
    # consumer's CMake site / build.rs).
    # Phase 121.10 — nros-platform-orin-spe was deleted. orin-spe is
    # now a board over FreeRTOS-FSP (see `packages/boards/nros-board-orin-spe`);
    # IVC + FSP init live at the board level.
    # Platform shims for RMW backends
    # Phase 129.D — `zpico-platform-shim` deleted. IVC link-layer
    # forwarders carved out into `zpico-link-ivc`; every other
    # `z_*` / `_z_*` symbol now comes from `zpico-sys`'s default-on
    # `platform-aliases` C TU.
    "packages/zpico/zpico-link-ivc",
    "packages/zpico/zpico-platform-custom",
    # Phase 129.D.2 — `xrce-platform-shim` deleted. `uxr_millis` /
    # `uxr_nanos` symbols now come from
    # `nros-rmw-xrce/src/platform_aliases.c` compiled into
    # `nros-rmw-xrce-cffi`.
    # Phase 115.K.2.5.1.0 — Rust shim that links the C XRCE backend
    # (nros-rmw-xrce) and exposes its register entry point.
    "packages/xrce/nros-rmw-xrce-cffi",
    # Phase 160.L — standalone staticlib wrapper. Mirrors
    # nros-rmw-zenoh-staticlib so cmake /
    # Corrosion can import a `staticlib` target without forcing the
    # cffi crate itself to emit one (which broke Zephyr no_std
    # compiles per Phase 154's notes).
    "packages/xrce/nros-rmw-xrce-cffi-staticlib",
    # Phase 128.F — cross-RMW bridge primitives.
    "packages/bridge/nros-bridge",
    # Phase 212.N.2 — direct-exec family driver (Cortex-M / esp-hal
    # bare-metal). Per-board crates (mps2-an385, stm32f4, esp32) migrate
    # onto it in 212.N.3 / N.7; until then the crate stands alone.
    "packages/boards/nros-board-bare-metal",
    # Phase 212.N.2 — POSIX family driver (hosted Linux/macOS).
    # Per-board crates migrate onto it in 212.N.3.
    "packages/boards/nros-board-posix",
    # Phase 212.N.3 — tier-1 per-board shim plugging `nros-board-posix`.
    "packages/boards/nros-board-native",
]

# Excluded from workspace — standalone packages and third-party forks
exclude = [
    # rcl-interfaces parent package (metadata only, no Rust targets)
    "packages/interfaces/rcl-interfaces",
    # lifecycle-msgs parent package (metadata only, no Rust targets)
    "packages/interfaces/lifecycle-msgs",
    # Examples are standalone packages that generate their own bindings
    # Native Rust examples (desktop/Linux)
    # Phase 118 — collapsed per-RMW cells (build-time RMW feature selection)
    "examples/native/rust/talker",
    # Phase 212.N.7 step-1 — Entry pkg POC. Empty [workspace] table;
    # historically git dep on github.com/NEWSLabNTU/nros-cli for `nros-build`
    # (212.N.4); post-Phase-218 the CLI lives in-tree at `packages/cli/` and
    # the `nros-build` crate is a path dep under that sub-workspace. The
    # standalone nros-cli repo is archived / read-only.
    "examples/native/rust/entry-poc",
    "examples/native/rust/listener",
    "examples/native/rust/service-server",
    "examples/native/rust/service-client",
    "examples/native/rust/action-server",
    "examples/native/rust/action-client",
    # Phase 233.3 — PX4 XRCE-DDS companion (RFC-0039 Track B). Standalone
    # copy-out; carries a trimmed generated `px4_msgs` under `generated/`.
    "examples/px4/rust/xrce/offboard-companion",
    # Phase 233.4 — fake-PX4 stub publishing /fmu/out/vehicle_odometry so the
    # companion round-trip is CI-able without PX4 SITL. Standalone copy-out.
    "examples/px4/rust/xrce/px4-stub",
    "examples/qemu-arm-freertos/rust/talker",
    "examples/qemu-arm-freertos/rust/listener",
    "examples/qemu-arm-freertos/rust/service-server",
    "examples/qemu-arm-freertos/rust/service-client",
    "examples/qemu-arm-freertos/rust/action-server",
    "examples/qemu-arm-freertos/rust/action-client",
    "examples/qemu-riscv64-threadx/rust/talker",
    "examples/qemu-riscv64-threadx/rust/listener",
    "examples/qemu-riscv64-threadx/rust/service-server",
    "examples/qemu-riscv64-threadx/rust/service-client",
    "examples/qemu-riscv64-threadx/rust/action-server",
    "examples/qemu-riscv64-threadx/rust/action-client",
    "examples/threadx-linux/rust/talker",
    "examples/threadx-linux/rust/listener",
    "examples/threadx-linux/rust/service-server",
    "examples/threadx-linux/rust/service-client",
    "examples/threadx-linux/rust/action-server",
    "examples/threadx-linux/rust/action-client",
    # Phase 212.N.7 step-2 — Entry pkg siblings (board = ThreadxLinux).
    "examples/threadx-linux/rust/talker_entry",
    "examples/threadx-linux/rust/listener_entry",
    "examples/threadx-linux/rust/service-server_entry",
    "examples/threadx-linux/rust/service-client_entry",
    "examples/threadx-linux/rust/action-server_entry",
    "examples/threadx-linux/rust/action-client_entry",
    "examples/native/rust/logging",
    "examples/native/rust/custom-transport-talker",
    "examples/native/rust/custom-transport-listener",
    "examples/native/rust/lifecycle-node",
    "examples/native/rust/custom-msg",
    "examples/native/rust/service-client-async",
    "examples/native/rust/action-client-async",
    "packages/testing/nros-bench/executor-fairness",
    "packages/testing/nros-bench/stress-zenoh",
    "examples/native/rust/talker-rtic",
    "examples/native/rust/listener-rtic",
    "examples/native/rust/service-server-rtic",
    "examples/native/rust/service-client-rtic",
    "examples/native/rust/action-server-rtic",
    "examples/native/rust/action-client-rtic",
    # Phase 169.2 — examples/bridges/native-rust-zenoh-to-dds
    # + examples/native/rust/dds/* deleted with the retired Rust DDS
    # backend. Rust DDS examples will be re-created once the
    # Rust-to-Cyclone path lands (Phase 169.5 / 169.9).
    # QEMU ARM examples (bare-metal Cortex-M3)
    "examples/qemu-arm-baremetal/rust/talker",
    "examples/qemu-arm-baremetal/rust/listener",
    "packages/testing/nros-tests/bins/cdr-roundtrip-qemu",
    "packages/testing/nros-bench/wcet-cycles-qemu",
    "packages/testing/nros-bench/large-msg-baremetal",
    "packages/testing/nros-tests/bins/lan9118-qemu",
    "examples/qemu-arm-baremetal/rust/talker-rtic",
    "examples/qemu-arm-baremetal/rust/listener-rtic",
    "examples/qemu-arm-baremetal/rust/service-server-rtic",
    "examples/qemu-arm-baremetal/rust/service-client-rtic",
    "examples/qemu-arm-baremetal/rust/action-server-rtic",
    "examples/qemu-arm-baremetal/rust/action-client-rtic",
    "examples/qemu-arm-baremetal/rust/talker-rtic-mixed",
    "examples/qemu-arm-baremetal/rust/listener-rtic-mixed",
    "examples/qemu-arm-baremetal/rust/serial-talker",
    "examples/qemu-arm-baremetal/rust/serial-listener",
    # Phase 169.2 — Rust DDS examples deleted (no Rust→Cyclone
    # path yet; see Phase 169 doc work item .9).
    # QEMU ARM FreeRTOS examples (Cortex-M3 + FreeRTOS + lwIP)
    "examples/qemu-arm-freertos/rust/zenoh/talker",
    "examples/qemu-arm-freertos/rust/zenoh/listener",
    "examples/qemu-arm-freertos/rust/zenoh/service-server",
    "examples/qemu-arm-freertos/rust/zenoh/service-client",
    "examples/qemu-arm-freertos/rust/zenoh/action-server",
    "examples/qemu-arm-freertos/rust/zenoh/action-client",
    # Phase 212.N.7 step-2 — Entry pkg siblings (per board target =
    # Mps2An385). Each shadows a Component pkg above; runs the new
    # `<Mps2An385 as BoardEntry>::run(|ctx| run_plan(ctx))` lifecycle.
    "examples/qemu-arm-freertos/rust/talker_entry",
    "examples/qemu-arm-freertos/rust/listener_entry",
    "examples/qemu-arm-freertos/rust/service-server_entry",
    "examples/qemu-arm-freertos/rust/service-client_entry",
    "examples/qemu-arm-freertos/rust/action-server_entry",
    "examples/qemu-arm-freertos/rust/action-client_entry",
    # Phase 169.2 — qemu-arm-freertos rust/dds deleted.
    # QEMU ARM NuttX examples (Cortex-M3 + NuttX)
    "examples/qemu-arm-nuttx/rust/talker",
    "examples/qemu-arm-nuttx/rust/listener",
    "examples/qemu-arm-nuttx/rust/service-server",
    "examples/qemu-arm-nuttx/rust/service-client",
    "examples/qemu-arm-nuttx/rust/action-server",
    "examples/qemu-arm-nuttx/rust/action-client",
    # Phase 212.N.7 step-2 — Entry pkg siblings (board = QemuArmVirt).
    "examples/qemu-arm-nuttx/rust/talker_entry",
    "examples/qemu-arm-nuttx/rust/listener_entry",
    "examples/qemu-arm-nuttx/rust/service-server_entry",
    "examples/qemu-arm-nuttx/rust/service-client_entry",
    "examples/qemu-arm-nuttx/rust/action-server_entry",
    "examples/qemu-arm-nuttx/rust/action-client_entry",
    # Phase 169.2 — qemu-arm-nuttx rust/dds deleted.
    # STM32F4 examples
    "examples/stm32f4/rust/talker",
    "examples/stm32f4/rust/polling",
    "examples/stm32f4/rust/talker-rtic",
    "examples/stm32f4/rust/listener-rtic",
    "examples/stm32f4/rust/service-server-rtic",
    "examples/stm32f4/rust/service-client-rtic",
    "examples/stm32f4/rust/action-server-rtic",
    "examples/stm32f4/rust/action-client-rtic",
    "examples/stm32f4/rust/talker-embassy",
    "examples/stm32f4/rust/listener-embassy",
    # Phase 216.C.4 — board-agnostic talker Node pkg shared by the
    # Embassy + RTIC (parallel B.5 wave) Entry pkgs above. Excluded
    # because it cross-builds for `thumbv7em-none-eabihf` only.
    "examples/stm32f4/rust/talker_pkg",
    # Phase 216.C.5 — board-agnostic listener Node pkg (Deferred
    # dispatch + tag-based subscription) consumed by the Embassy
    # Entry pkg above. Excluded because it cross-builds for
    # `thumbv7em-none-eabihf` only. RTIC sibling lives at
    # `listener_pkg_rtic` (Phase 216.B.5) — split because the
    # Embassy flavor's `ListenerState` carries an
    # `Option<embassy_executor::Spawner>` (spawn-from-sync escape
    # demo), whereas RTIC's task spawn is a static
    # `task_name::spawn()` symbol with no runtime handle.
    "examples/stm32f4/rust/listener_pkg",
    "examples/stm32f4/rust/listener_pkg_rtic",
    # Phase 216.B.5 — board-agnostic action-client Node pkg (Inline
    # dispatch + EntityId-based action client via `create_action_client`).
    # Excluded because it cross-builds for `thumbv7em-none-eabihf` only.
    "examples/stm32f4/rust/action_client_pkg",
    # Phase 216.B.5 — board-agnostic action-server Node pkg (Deferred
    # dispatch + tag-based action via `create_action_static`).
    # Excluded because it cross-builds for `thumbv7em-none-eabihf` only.
    "examples/stm32f4/rust/action_server_pkg",
    # Phase 216.B.5 — board-agnostic service-server Node pkg (Deferred
    # dispatch + tag-based service via `create_service_static`). Shared
    # with a potential future Embassy Entry pkg, hence sibling-pkg
    # naming. Excluded because it cross-builds for
    # `thumbv7em-none-eabihf` only.
    "examples/stm32f4/rust/service_server_pkg",
    "examples/stm32f4/rust/service_client_pkg",
    "packages/testing/nros-smoke/stm32f4-smoltcp-echo",
    # Zephyr examples
    # Phase 168.1 collapsed-shape Rust examples (one dir, N RMW
    # backends via Kconfig overlay + Cargo features).
    "examples/zephyr/rust/talker",
    "examples/zephyr/rust/listener",
    "examples/zephyr/rust/service-server",
    "examples/zephyr/rust/service-client",
    "examples/zephyr/rust/action-server",
    "examples/zephyr/rust/action-client",
    # Phase 217.D.1 — Rust talker on the FVP AEMv8-R Cortex-A SMP
    # carve-out (one-board-one-RMW reference, mirroring the cpp side's
    # `examples/zephyr/cpp/cyclonedds/talker-aemv8r/`).
    "examples/zephyr/rust/cyclonedds/talker-aemv8r",
    # Phase 225.P — Zephyr workspace Entry (a `west build` staticlib app).
    # It lives INSIDE the nested `examples/workspaces/rust` workspace but
    # is `exclude`d from it (built by west, not plain cargo) and carries
    # NO own `[workspace]` table (so the `nros::main!` macro's pkg-index
    # still resolves the sibling node pkgs against that nested workspace
    # root). Without this repo-root exclude, cargo's workspace walker
    # would otherwise leak it up to the repo-root workspace and error.
    "examples/workspaces/rust/src/zephyr_entry",
    # `examples/zephyr/rust/service-client-async` dropped 2026-06-02 per
    # Phase 212.M-F.5 — pending async-`Component` trait decision.
    # Zephyr XRCE examples (require Zephyr workspace + XRCE Agent)
    # Phase 169.2 — Zephyr rust/dds examples deleted.
    # No Cargo.toml in cpp/c examples (Zephyr cmake builds them)
    # Reference implementations (library, not an example)
    "packages/reference/qemu-smoltcp-bridge",
    # smoltcp network provider (embedded-only, requires cross-compilation)
    "packages/drivers/nros-smoltcp",
    # Shared bare-metal helpers (PRNG, sleep, libc stubs) — embedded-only
    "packages/drivers/nros-baremetal-common",
    # lwIP BSD socket bindings for FreeRTOS (requires FREERTOS_DIR + LWIP_DIR)
    "packages/drivers/freertos-lwip-sys",
    # NetX Duo BSD socket bindings for ThreadX (requires THREADX_DIR + NETX_DIR)
    "packages/drivers/threadx-netx-sys",
    # NuttX POSIX socket bindings (requires NUTTX_DIR)
    "packages/drivers/nuttx-sys",
    # Zephyr POSIX socket bindings (requires ZEPHYR_BUILD_DIR)
    "packages/drivers/zephyr-posix-sys",
    # Serial (UART) link layer (embedded-only, requires cross-compilation)
    "packages/zpico/zpico-serial",
    # CMSDK UART driver (embedded-only, Cortex-M)
    "packages/drivers/cmsdk-uart",
    # STM32F4 USART driver (embedded-only, Cortex-M)
    "packages/drivers/stm32f4-usart",
    # Native XRCE-DDS serial examples (requires XRCE Agent / serial transport)
    "examples/native/rust/serial-talker",
    "examples/native/rust/serial-listener",
    "packages/testing/nros-bench/large-msg-xrce",
    "packages/testing/nros-bench/stress-xrce",
    # Board crates (embedded-only, require cross-compilation)
    "packages/boards/mps2-an385-pac",
    "packages/boards/nros-board-mps2-an385",
    "packages/platforms/nros-platform-mps2-an385",
    "packages/platforms/nros-platform-stm32f4",
    "packages/platforms/nros-platform-esp32",
    "packages/platforms/nros-platform-esp32-qemu",
    "packages/platforms/nros-platform-esp32s3",
    "packages/boards/nros-board-esp32",
    "packages/boards/nros-board-esp32-qemu",
    "packages/boards/nros-board-esp32s3",
    "packages/boards/nros-board-embassy-stm32f4",
    "packages/boards/nros-board-stm32f4",
    # Phase 216.B.2 — RTIC + STM32F4 sibling crate. Cross-compile
    # only (thumbv7em-none-eabihf); excluded from the host workspace
    # walk for the same reason as `nros-board-stm32f4` above.
    "packages/boards/nros-board-rtic-stm32f4",
    "packages/boards/nros-board-nuttx-qemu-arm",
    # 194.3c — riscv (rv-virt) NuttX board: cross-only
    # (riscv32imac-unknown-nuttx-elf, build-std), excluded from the host
    # workspace walk like the arm NuttX board crate.
    "packages/boards/nros-board-nuttx-qemu-riscv",
    "packages/boards/nros-board-mps2-an385-freertos",
    # Phase 212.N.7 step-4 — the `freertos-qemu-mps2-an385-bsp` baker
    # crate is retired. Its `bake_system_main_rs` + `__nros_component_*`
    # symbol-walking is gone (no in-tree consumers after step-5
    # migrated the firmware fixture to the Entry pkg shape). FreeRTOS
    # users now consume `nros-board-mps2-an385-freertos` directly via
    # the `BoardEntry::run` trait surface.
    # Phase 149.1.A scaffolding — generic FreeRTOS+lwIP façade.
    # 149.1.B carves the kernel + lwIP build glue here.
    "packages/boards/nros-board-freertos",
    # Phase 149.2.A scaffolding — generic ThreadX+NetX-Duo façade.
    # 149.2.B carves the kernel + NetX-Duo build glue here.
    "packages/boards/nros-board-threadx",
    # Phase 149.4.A scaffolding — thin NuttX façade (NuttX owns
    # the kernel build via its own apps/external + Make.defs).
    "packages/boards/nros-board-nuttx",
    # Phase 100.6 — AGX Orin SPE board crate. Excluded because it
    # links against NVIDIA's `tegra_aon_fsp.a`, which only exists on
    # an SDK-Manager-installed Orin SPE FSP tree at `$NV_SPE_FSP_DIR`.
    # Phase 212.N.2 — Zephyr family driver (NetworkWait-only carve-out;
    # Zephyr's Kconfig + DTS own BSP and the C `main()`, so a Rust
    # staticlib can't implement the full Board surface). Standalone
    # because the build needs ZEPHYR_BASE + a populated west workspace —
    # not part of the host clippy lane. Build via `cd packages/boards/
    # nros-board-zephyr && cargo check`.
    "packages/boards/nros-board-zephyr",
    # Build via `cd packages/boards/nros-board-orin-spe && cargo build`
    # or `just orin_spe build` (Phase 100.7).
    "packages/boards/nros-board-orin-spe",
    "packages/boards/nros-board-threadx-linux",
    "packages/boards/nros-board-threadx-qemu-riscv64",
    # Phase 117.10 — ARM FVP Base_RevC AEMv8-R Cortex-A SMP under Zephyr.
    # Build via `west build -b fvp_baser_aemv8r/fvp_aemv8r_aarch64/smp` from
    # an example app; cargo `check` works on host for the Rust surface.
    "packages/boards/nros-board-fvp-aemv8r-smp",
    # Phase 117.11 — NXP X-S32Z270-DC (DC2) Cortex-R52 RTU0 under Zephyr.
    # Build via `west build -b s32z2xxdc2/s32z270/rtu0/D`; cargo check
    # works on host for the Rust surface.
    "packages/boards/nros-board-s32z270dc2-r52",
    # ThreadX Linux examples (require ThreadX + NetX Duo SDKs)
    "examples/threadx-linux/rust/zenoh/talker",
    "examples/threadx-linux/rust/zenoh/listener",
    "examples/threadx-linux/rust/zenoh/service-server",
    "examples/threadx-linux/rust/zenoh/service-client",
    "examples/threadx-linux/rust/zenoh/action-server",
    "examples/threadx-linux/rust/zenoh/action-client",
    # Phase 169.2 — threadx-linux rust/dds deleted.
    # ThreadX QEMU RISC-V examples (require ThreadX + NetX Duo SDKs + RISC-V toolchain)
    "examples/qemu-riscv64-threadx/rust/zenoh/talker",
    "examples/qemu-riscv64-threadx/rust/zenoh/listener",
    "examples/qemu-riscv64-threadx/rust/zenoh/service-server",
    "examples/qemu-riscv64-threadx/rust/zenoh/service-client",
    "examples/qemu-riscv64-threadx/rust/zenoh/action-server",
    "examples/qemu-riscv64-threadx/rust/zenoh/action-client",
    # Phase 169.2 — qemu-riscv64-threadx rust/dds deleted.
    # ESP32 crates (RISC-V, require nightly + esp-hal)
    "packages/drivers/openeth-smoltcp",
    # ESP32 examples (RISC-V, require nightly + esp-hal)
    "packages/testing/nros-smoke/esp32-hello-world",
    "examples/esp32/rust/talker",
    "examples/esp32/rust/listener",
    "examples/qemu-esp32-baremetal/rust/talker",
    "examples/qemu-esp32-baremetal/rust/listener",
    # Phase 169.2 — qemu-esp32-baremetal rust/dds deleted.
    # Verus verification crate (requires Verus toolchain, excluded from workspace)
    "packages/verification/nros-verification",
    # PX4 vendored sources (submodule under third-party/px4/). Has its
    # own workspace / build system; excluded so cargo doesn't try to
    # absorb its crates into nano-ros's workspace.
    "third-party/px4/px4-rs",
    "third-party/px4/PX4-Autopilot",
    # Phase 208.D.3 — out-of-workspace test crate that path-deps into
    # the px4-rs submodule. Listed here so cargo doesn't error on a
    # spurious workspace member when walking `packages/testing/`.
    "packages/testing/nros-px4-sitl-test",
    # Phase 212.H.1 fixture — its own [workspace] root with talker_pkg
    # + listener_pkg as members and demo_bringup excluded. Listed here
    # so the outer workspace walker doesn't try to absorb its members.
    "packages/testing/nros-tests/fixtures/multi_pkg_workspace_zephyr",
    "packages/testing/nros-tests/fixtures/multi_pkg_workspace_zephyr/talker_pkg",
    "packages/testing/nros-tests/fixtures/multi_pkg_workspace_zephyr/listener_pkg",
    # Phase 212.N.9 fixture — its own `[workspace]` root + `@NANO_ROS_ROOT@`
    # path-dep placeholders. Listed here so the outer workspace walker
    # doesn't try to absorb its members at codebase scan time.
    "packages/testing/nros-tests/fixtures/n9_workspace",
    "packages/testing/nros-tests/fixtures/n9_workspace/src/talker_pkg",
    "packages/testing/nros-tests/fixtures/n9_workspace/src/demo_entry",
    # Phase 228.G — multi-tier `nros::main!()` emit fixture (own `[workspace]`).
    "packages/testing/nros-tests/fixtures/orchestration_tiers_native",
    "packages/testing/nros-tests/fixtures/orchestration_tiers_native/src/ctrl_pkg",
    "packages/testing/nros-tests/fixtures/orchestration_tiers_native/src/telem_pkg",
    "packages/testing/nros-tests/fixtures/orchestration_tiers_native/src/demo_entry",
    # Phase 228.E.2 — multi-tier FreeRTOS firmware fixture (thumbv7m, own `[workspace]`).
    "packages/testing/nros-tests/fixtures/orchestration_tiers_freertos",
    "packages/testing/nros-tests/fixtures/orchestration_tiers_freertos/entry",
    "packages/testing/nros-tests/fixtures/orchestration_tiers_freertos/src/ctrl_pkg",
    "packages/testing/nros-tests/fixtures/orchestration_tiers_freertos/src/telem_pkg",
    # Phase 218 — `packages/cli/` is the merged-in nros-cli tree, a
    # SUB-WORKSPACE with its own `[workspace]` table + `Cargo.lock`.
    # Cargo's auto-discovery stops at sub-workspace boundaries, so the
    # explicit exclude is belt-and-suspenders, but it also keeps tools
    # that walk the source tree (codegen-system scanners, IDE
    # rust-analyzer) from accidentally treating the CLI deps as part of
    # the runtime workspace's no_std feature-unification view
    # (Phase 214.F.3 guard).
    "packages/cli",
]

[workspace.package]
# Phase 218.J — JetPack-style bundle versioning. SINGLE version across
# the runtime workspace (this file) + the CLI sub-workspace at
# `packages/cli/Cargo.toml`. Bumps in lockstep on every release,
# regardless of which subsystem changed. Distribution model: git tag
# + release-page artifacts (CLI binaries via Phase 218.G); no crate
# is published to crates.io. The Phase 218.E ABI guard relies on this
# equality for its strict version check between the CLI binary and a
# consumer's Cargo.lock-resolved `nros-core`.
#
# `0.4.0` is the monorepo-merge baseline: nros-cli's last standalone
# tag was `nros-v0.3.7`; bumping to `0.4.0` signals the merge.
# `scripts/check-version-lockstep.sh` (wired into `lint.yml`) errors
# if this and `packages/cli/Cargo.toml`'s `[workspace.package].version`
# diverge. Use `just release-bump <X.Y.Z>` to bump both atomically.
version = "0.5.0"
edition = "2024"
authors = ["Lin Hsiang-Jui <jerry73204@gmail.com>", "NEWSLabNTU"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/NEWSLabNTU/nano-ros"
homepage = "https://github.com/NEWSLabNTU/nano-ros"
documentation = "https://docs.rs/nros"
readme = "README.md"
rust-version = "1.75"
categories = ["embedded", "no-std", "network-programming"]
keywords = ["ros2", "robotics", "embedded", "no-std", "rtos"]

[workspace.dependencies]
# Internal crates — version required for crates.io; path used locally.
nros-core = { version = "0.5.0", path = "packages/core/nros-core", default-features = false }
nros-serdes = { version = "0.5.0", path = "packages/core/nros-serdes", default-features = false }
nros-macros = { version = "0.5.0", path = "packages/core/nros-macros" }
nros-orchestration-ir = { version = "0.5.0", path = "packages/core/nros-orchestration-ir" }
nros-params = { version = "0.5.0", path = "packages/core/nros-params", default-features = false }
nros-rmw = { version = "0.5.0", path = "packages/core/nros-rmw", default-features = false }
nros-rmw-zenoh = { version = "0.5.0", path = "packages/zpico/nros-rmw-zenoh", default-features = false }
# Phase 115.K.2.5.1.0 — Rust shim that links the C XRCE backend.
# Used by nros / nros-node when `rmw-xrce-cffi` feature is on, and
# by example crates that opt into the cffi-via-C-backend path.
nros-rmw-xrce-cffi = { version = "0.5.0", path = "packages/xrce/nros-rmw-xrce-cffi", default-features = false }
# Phase 214.S.2 — `nros-rmw-cyclonedds-sys` is referenced as a
# workspace dep from `nros-node` (private optional, `__cyclonedds-link`
# feature) and the `nros` umbrella (`rmw-cyclonedds` feature). Carries
# `links = "cyclonedds"` so any direct dependent's build script
# auto-detects presence via `DEP_CYCLONEDDS_PRESENT=1`. **Keeps default
# features on** — `vendored` is part of the default set (S.1) so any
# `cargo build` that pulls this crate gets the in-tree C++ backend
# compiled. External CMake / Zephyr consumers that supply the symbols
# elsewhere opt out via `default-features = false` at the dep-site.
nros-rmw-cyclonedds-sys = { version = "0.5.0", path = "packages/dds/nros-rmw-cyclonedds-sys" }
nros-rmw-cffi = { version = "0.5.0", path = "packages/core/nros-rmw-cffi", default-features = false }
nros-node = { version = "0.5.0", path = "packages/core/nros-node", default-features = false }
nros-log = { version = "0.5.0", path = "packages/core/nros-log" }
nros-orchestration = { version = "0.5.0", path = "packages/core/nros-orchestration", default-features = false }
nros-build-helpers = { version = "0.5.0", path = "packages/core/nros-build-helpers" }
nros-sizes-build = { version = "0.5.0", path = "packages/core/nros-sizes-build" }
nros-platform = { version = "0.5.0", path = "packages/core/nros-platform", default-features = false }
nros-platform-cffi = { version = "0.5.0", path = "packages/core/nros-platform-cffi", default-features = false }
# Phase 121.3.deprecate-rust-remove + 123.A.1.x.2 — the Rust kernel
# platform crates (nros-platform-{freertos,nuttx,threadx,zephyr,posix})
# were deleted. The `packages/core/nros-platform-{rtos,posix}/`
# directories now hold the C ports only — no Cargo crate. Consumers
# link the C port via the board crate's build.rs (FreeRTOS, ThreadX)
# or via the parent build
# system (Zephyr west, NuttX make).
zpico-link-ivc = { version = "0.5.0", path = "packages/zpico/zpico-link-ivc", default-features = false }
zpico-platform-custom = { version = "0.5.0", path = "packages/zpico/zpico-platform-custom", default-features = false }
zpico-sys = { version = "0.5.0", path = "packages/zpico/zpico-sys", default-features = false }
zpico-alloc = { version = "0.5.0", path = "packages/zpico/zpico-alloc" }
xrce-sys = { version = "0.5.0", path = "packages/xrce/xrce-sys", default-features = false }

# no_std compatible
heapless = "0.8"
embedded-io = "0.6"

# Serialization
byteorder = { version = "1.5", default-features = false }

# Proc macros
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

# Optional std dependencies
thiserror = "1"

# Embedded runtime (QEMU testing)
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
panic-semihosting = { version = "0.6", features = ["exit"] }
panic-halt = "1.0"
qemu-exit = "3.0"

# Logging
log = { version = "0.4", default-features = false }
env_logger = "0.11"

# Embedded logging
defmt = "0.3"
defmt-rtt = "0.4"

# FFI / C interop
cty = "0.2"

# ---------------------------------------------------------------------------
# Workspace-wide lint configuration. Member crates opt in with
# `[lints] workspace = true`. Replaces the ad-hoc CLIPPY_LINTS string the
# justfile used to pass on the command line.
# ---------------------------------------------------------------------------
[workspace.lints.rust]
warnings = "deny"
# Whitelist cfg flags consumed by the workspace's verifiers / codegen tools
# (Kani for bounded model checking, cbindgen for C header generation,
# zpico_backend for the zenoh-pico backend selector). Combined here so
# each crate can opt in via `[lints] workspace = true` without needing
# its own per-crate `[lints.rust] unexpected_cfgs` override.
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(kani)',
    'cfg(cbindgen)',
    'cfg(verus_keep_ghost)',
    'cfg(verus_keep_ghost_body)',
    'cfg(zpico_backend, values("posix", "zephyr", "bare-metal", "freertos", "nuttx", "threadx", "orin-spe"))',
] }

[workspace.lints.clippy]
infinite_iter = "deny"
while_immutable_condition = "deny"
never_loop = "deny"
empty_loop = "deny"
unconditional_recursion = "deny"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"

[profile.release]
opt-level = "s"      # Optimize for size
# Phase 234 (issue 0023): LTO is on. The `nros-sizes-build` probe used to
# require `lto = "off"` because it read `__NROS_SIZE_*` static *byte sizes*
# via the `object` crate, which can't parse the LLVM-bitcode rlib members LTO
# emits. The probe now also reads the Phase 77.25 markers
# `__nros_size_<NAME>::<N>` (size baked into the symbol *name*) via rustc's
# bundled `llvm-nm` (`extract_sizes_via_llvm_nm`) — validated to recover
# byte-identical sizes under `lto = "fat"` on host and `thumbv7m-none-eabi`.
# Sizes are layout-determined (LTO-independent), so the values are unchanged.
lto = "fat"
codegen-units = 1    # Better optimization
panic = "abort"      # Smaller binary, no unwinding

[profile.dev]
opt-level = 1        # Some optimization even in dev for embedded

[profile.nros-fast-release]
inherits = "release"
opt-level = 2
codegen-units = 16
incremental = true
debug = 1
lto = "off"
panic = "abort"

# Patches for generated crates that use version = "*"
[patch.crates-io]
nros-core = { path = "packages/core/nros-core" }
nros-serdes = { path = "packages/core/nros-serdes" }
